--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,12 @@ ul {
     margin: 0;
 }
 
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+    background-color: tomato;
+}
+
 /* Основные заголовки цвет */
 .section-title {
     color: var(--primary-text-color);
@@ -135,7 +141,7 @@ outline: 2px solid tomato;
 }
 
 .feature-list .title {
-    margin-top: 0;
+    margin-top: 30px;
     margin-bottom: 0;
 
     color: var(--primary-text-color);
@@ -147,7 +153,7 @@ outline: 2px solid tomato;
 }
 
 .feature-list .subtitle {
-    margin-top: 0;
+    margin-top: 10px;
     margin-bottom: 0;
 
     color: var(--secondary-text-color);
@@ -161,6 +167,7 @@ outline: 2px solid tomato;
 .work-list .title {
     margin-top: 0;
     margin-bottom: 0;
+    padding-top: 0;
     
     color: var(--primary-white-color);
     background-color: var(--secondary-text-color);
@@ -175,6 +182,10 @@ outline: 2px solid tomato;
     margin-bottom: 50px;
 }
 
+.section.work-section {
+    padding-top: 0;
+}
+
 
 /* команда */
 .team-section {
@@ -186,7 +197,7 @@ outline: 2px solid tomato;
 }
 
 .team-list .title{
-    margin-top: 0;
+    margin-top: 30px;
     margin-bottom: 0;
     
     color: var(--primary-text-color);
@@ -197,14 +208,19 @@ outline: 2px solid tomato;
 }
 
 .team-list .subtitle {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin-top: 10px;
+    margin-bottom: 16px;
 
     color: var(--secondary-text-color);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
     letter-spacing: 0.03em;
+}
+
+/* Клиенты */
+.customer {
+    margin-bottom: 50px;
 }
 
 /* футер */
