--- a/css/styles.css
+++ b/css/styles.css
@@ -147,11 +147,9 @@ outline: 2px solid tomato;
     border: solid 1px var(--accent-color);
     min-width: 200px;
     text-align: center;
-    margin-bottom: 200px;
 
     color: var(--primary-white-color);
     background-color: var(--accent-color);
-
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
@@ -169,6 +167,10 @@ outline: 2px solid tomato;
 .feature-list {
     display: flex;
     padding-top: 94px;
+}
+
+.feature-list .item:not(:last-child) {
+    margin-right: 29px;
 }
 
 .feature-list .title {
@@ -221,10 +223,22 @@ outline: 2px solid tomato;
     display: flex;
 }
 
+.work-list .item:not(:last-child) {
+    margin-right: 30px;
+}
 
 /* команда */
 .team-section {
     background-color: #F5F4FA;
+}
+
+.team-list {
+    display: flex;
+    text-align: center;
+}
+
+.team-list .item:not(:last-child) {
+    margin-right: 30px;
 }
 
 .team-section .section-title {
@@ -253,15 +267,54 @@ outline: 2px solid tomato;
     letter-spacing: 0.03em;
 }
 
+.team-list a {
+    display: inline-block;
+}
+
+.social-list {
+    display: flex;
+    justify-content: center;
+}
+
+.team-list .social-item:not(:last-child) {
+    margin-right: 11px;
+}
+
 /* Клиенты */
 .customer {
     margin-bottom: 50px;
 }
 
-/* футер */
-.footer {
-    background-color: #2F303A;
+.customer-list {
+    display: flex;
+    /* justify-content: center; */
 }
+
+.customer-list .item {
+    width: 175px;
+    align-content: center;
+}
+
+.customer-list .item:not(:last-child) {
+    margin-right: 30px;
+}
+
+/* футер */
+.footer .container{
+    background-color: #2F303A;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.socials {
+    display: flex;
+}
+
+.socials .item {
+    display: flex;
+}
+
 .footer-address {
     color: var(--primary-white-color);
 
@@ -295,8 +348,10 @@ outline: 2px solid tomato;
 }
 
 .copy {
-    color: rgba(255, 255, 255, 0.4);
+    margin-bottom: 0;
+    padding-bottom: 21px;
 
+    color: rgba(255, 255, 255, 0.4);
     font-weight: 400;
     font-size: 12px;
     line-height: 2;
@@ -353,4 +408,29 @@ button:focus {
 
 .prodject-list .link {
     text-decoration: none;
+}
+
+.filter {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.prodject-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.prodject-list .item {
+    width: 380px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    background-color: tomato;
+}
+
+.prodject-list .item:nth-child(3n) {
+    margin-right: 0;
+}
+
+.prodject-list .item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
 }
