--- a/css/styles.css
+++ b/css/styles.css
@@ -37,10 +37,6 @@ ul {
     list-style: none;
 }
 
-/* a {
-    display: block;
-} */
-
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -52,7 +48,6 @@ ul {
     width: 1200px;
     padding-right: 15px;
     padding-left: 15px;
-    outline: 2px solid tomato;
     }
 
 /* Основные заголовки цвет */
@@ -318,16 +313,21 @@ footer {
     background-color: #2F303A;
 }
 
-.address-container {
-    margin-right: 69px;
+.page-footer {
     display: flex;
-    flex-direction: column;
-    width: 231px;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 48px;
+    padding-bottom: 28px;
 }
 
-.footer-logo {
-    margin-bottom: 10px;
-    padding-top: 48px;
+.footer-link {
+    display: block;
+}
+
+.address-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-address {
@@ -371,12 +371,6 @@ footer {
     color: var(--primary-white-color);
 }
 
-.subscribe {
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 56px;
-}
-
 .footer-button {
     display: block;
 
@@ -388,6 +382,7 @@ footer {
     margin-bottom: 0;
     margin-top: 0;
     padding-bottom: 21px;
+    padding-top: 18px;
 
     color: rgba(255, 255, 255, 0.4);
     font-weight: 400;
@@ -397,11 +392,18 @@ footer {
     letter-spacing: 0.03em;
 }
 
-.socials {
-    padding-left: 0;
-    margin-top: 21px;
-    margin-bottom: 0;
+.socials-item:not(:first-child) {
+    margin-left: 10px;
+}
 
+.socials-item .socials-link {
+    display: inline-block;
+}
+
+.socials {
+    display: flex;
+    padding-left: 0;
+    align-items: center;
 }
 
 /* Портфолио */
@@ -425,8 +427,10 @@ button:focus {
 
 /* Галерея */
 .prodject-list .prodject-title {
-    color: var(--primary-text-color);
+    margin-top: 20px;
+    margin-bottom: 4px;
 
+    color: var(--primary-text-color);
     font-weight: bold;
     font-size: 18px;
     line-height: 2;
@@ -434,8 +438,10 @@ button:focus {
 }
 
 .prodject-list .subtitle {
-    color: var(--secondary-text-color);
+    margin-top: 0;
+    margin-bottom: 20px;
 
+    color: var(--secondary-text-color);
     font-weight: normal;
     font-size: 16px;
     line-height: 1.9;
@@ -453,6 +459,7 @@ button:focus {
 
 .prodject-list .link {
     text-decoration: none;
+    display: block;
 }
 
 .filter {
@@ -463,13 +470,15 @@ button:focus {
 .prodject-list {
     display: flex;
     flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 .prodject-list .item {
-    width: 380px;
+    width: 370px;
     margin-right: 30px;
     margin-bottom: 30px;
-    background-color: tomato;
 }
 
 .prodject-list .item:nth-child(3n) {
