--- a/css/styles.css
+++ b/css/styles.css
@@ -378,6 +378,10 @@ footer {
     height: 50px;
 }
 
+.footer-logo {
+    margin-bottom: 10px;
+}
+
 .copy {
     margin-bottom: 0;
     margin-top: 0;
